src/base/styles/form-control.styl
@require '_variables'

select-arrow()
  position absolute
  top 42%
  right 14px
  content ''
  width 4px
  height 4px
  border-width 1px 0 0 1px
  border-style solid
  border-color $color-grey-dark

.t-form-control
  position relative
  display inline-block
  input,
  select,
  textarea
    padding-top 10px
    padding-right 10px
    padding-bottom 10px
    padding-left 10px
    font-size $font-size-sm
    line-height $font-size-sm
    border-width 1px
    border-style solid
    border-color $color-grey
    border-radius $default-border-radius
    box-sizing border-box
    box-shadow 0 0 0 $color-purple-lighter
    transition-property box-shadow, border-color
    transition-duration 200ms
    transition-timing-function ease-in-out
    outline 0
    -webkit-appearance none
    &:focus,
    &:active
      box-shadow 0 0 0 4px $color-purple-x-lighter
      border-color $color-purple-lighter
    &[disabled]
      background-color $color-grey-lighter
      color $color-grey-darker
      border-color $color-grey-light
      pointer-events none
  textarea
    font-family inherit
  .t-select-wrapper
    position relative
    select
      padding-top 9px
      padding-right 30px
      padding-bottom 9px
      line-height $font-size-lg
    &:before
      select-arrow()
      transform rotate(-135deg) translate(-60%, -60%)
    &:after
      select-arrow()
      transform rotate(45deg) translate(-50%, -50%)
    &.t-select-wrapper-disabled
      &:before
        border-color $color-grey
      &:after
        border-color $color-grey
  &.t-form-control-invalid
    input,
    select,
    textarea
      border-color $color-red
      &:focus,
      &:active
        box-shadow 0 0 0 4px $color-red-lighter
        border-color $color-red
  &.t-form-control-block
    width 100%
    input,
    select,
    textarea
      width 100%

.t-form-control-error-message
  position absolute
  left 0
  bottom -17px
  display block
  color $color-red
  font-size $font-size-xxs

